tests/netconvert/errors/large_coordinates/options.netconvert
-e input_edges.edg.xml -n input_nodes.nod.xml -o net.net.xml --offset.disable-normalization
